tests/paczka1/fuzzy1/70100201.err
Error in line 1: LWBZNOD5E A96 61,8
Error in line 10: nI3DmY A96 152,2
Error in line 28: LWBZNOD5E S525 39,68
Error in line 20: kInIy71F S284 21,6
Error in line 26: LWBZNOD5E S525 38,3
